<resources>
    <string name="app_name">2Get</string>
    <string name="more_options">More Options</string>
    <string name="clear_list">Clear All Items</string>
    <string name="share_list">Share List</string>
    <string name="about">About</string>
    <string name="add_custom_item">Add Custom Item</string>
    <string name="_2_get_logo">2 Get Logo</string>
    <string name="version">1.0.0</string>
    <string name="about_detail">Here at 2Get, we are helping to create an easy experience for keeping
        track of the most common items that you might need throughout your week.
        \n\nWhether you are going to the store to just pick up some milk,
        or need to make a list of your entire food shopping before you leave the house, 2Get is here to help you prepare.</string>
    <string name="about_us">About Us</string>
    <string name="legal">Legal</string>
    <string name="licenses">Open Source Libraries</string>
    <string name="test_group_header">Test</string>
    <string name="test_child_item">Milk</string>
    <string name="test_view_item">Test Item</string>
    <string name="version_string">Version:</string>
    <string name="custom_item_hint">Custom Item Name</string>
    <string name="feedback_detail_info">We want you to love our product! That\'s why we want you to let us know of anything that can be improved.\n\nIf you have a new idea to make your life easier while using our app,
        let us know! We also hate to see something that may be making your life more difficult. This is why if you let us know any bugs or problems, we will begin to work on them right away!\n\nPlease email us with any
        improvements, bugs or just to tell us that you love the app! We would love to hear from you!</string>
    <string name="feedback_email">2GetCustomerService@gmail.com</string>
    <string name="feedback_button">Feedback</string>
    <string name="help_title">Help</string>
    <string name="help_detail_1"><u>Click on items to add them to your list</u></string>
    <string name="help_title_1">Adding items to your List</string>
    <string name="help_title_2">Need to Add a Custom Item?</string>
    <string name="help_title_3">View your List!</string>
    <string name="help_title_4">You got Something on your List?</string>
    <string name="help_title_5">Starting on your next List?</string>
    <string name="help_title_6">Want to share your List with someone?</string>
    <string name="help_image_1">Help adding items</string>
    <string name="help_detail_2"><u>Click on the Plus!</u></string>
    <string name="help_image_2">Help add custom item</string>
    <string name="help_detail_3"><u>Swipe to the left to check your List!</u></string>
    <string name="help_image_3">Help viewing list</string>
    <string name="help_detail_4"><u>Click on it to check it off!</u></string>
    <string name="help_detail_5"><u>Press Clear All Items!</u></string>
    <string name="help_detail_6"><u>Press Share List!</u></string>
    <string name="help_image_6">Help sharing list</string>
    <string name="help_image_5">Help clearing list</string>
    <string name="help_image_4">Help checking off items</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="help_button">Help</string>
    <string name="feedback_title">Feedback</string>
    <string name="help_title_7">Want to Clean Up your List?</string>
    <string name="help_detail_7"><u>Use the refresh button to remove your purchased items!</u></string>
    <string name="help_image_7">help_refreshing_list</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="libraries_we_use">Libraries We Use</string>
    <string name="osl_header_detail">The following sets forth attribution notices for third part software that may be contained in portions of the 2Get product. We thank the open source community for all of their contributions.</string>
    <string name="eula">End User License Agreement</string>
    <string name="glide_license_info"><b>Glide:</b> By Sam Judd / Google, Inc. (Google License)\nhttps://github.com/bumptech/glide</string>
    <string name="leakCanary_att"><b>LeakCanary:</b> Copyright © 2015 Square, Inc. (Apache License)\nhttps://github.com/square/leakcanary</string>
    <string name="google_att">License for everything not indicated as Third Party and not otherwise marked:\n\nGoogle License\nCopyright © 2014 Google, Inc. All rights reserved.\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\nTHIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of Google, Inc.</string>
    <string name="apache_license">Apache License
        \nCopyright © 2020 Michael Hamm
        \n\nLicensed under the Apache License, Version 2.0 (the \"License\"); You may not use this file except in compliance with the License. You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="test_item_detail">Test Item Detail</string>
    <string name="enter_item_detail_information">Enter Item Detail Information</string>
    <string name="item_detail_information">Item Detail Information</string>
    <string name="help_title_8">Need to Add Notes to an Item?</string>
    <string name="help_detail_8">Click and Hold the Item to Add Custom Notes!</string>
    <string name="help_image_8">Adding notes to item</string>

</resources>
