<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/clear"
            android:title="@string/clear_list"
            android:orderInCategory="10"
            app:showAsAction="collapseActionView"/>
        <item
            android:id="@+id/share"
            android:title="@string/share_list"
            android:orderInCategory="20"
            app:showAsAction="collapseActionView"/>
        <!--<item
            android:id="@+id/print"
            android:title="@string/print_list"
            android:orderInCategory="40"
            app:showAsAction="collapseActionView"/>-->
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:orderInCategory="60"
            app:showAsAction="collapseActionView"/>

</menu>