<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Help">

    <TextView
        android:id="@+id/help_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:text="@string/help_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_medium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help_addItem_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_1"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_1"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_1" />

            <View
                android:id="@+id/hr_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_1"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_2"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_2"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_6"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_2" />

            <View
                android:id="@+id/hr_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_2"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_3"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_3"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_2"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_3" />

            <View
                android:id="@+id/hr_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_3"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_4"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_4"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_4"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_4" />

            <View
                android:id="@+id/hr_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_4"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_5"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_5"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_7"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_5" />

            <View
                android:id="@+id/hr_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_5"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_6"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_6"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/help_5"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_6" />

            <View
                android:id="@+id/hr_6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_image_6"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/help_addItem_title_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hr_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/help_title_7"
                android:gravity="center"/>

            <TextView
                android:id="@+id/help_addItem_detail_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_title_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/help_detail_7"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/help_image_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/help_addItem_detail_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/help_8"
                android:adjustViewBounds="true"
                android:layout_marginTop="6dp"
                app:layout_constraintWidth_percent="0.75"
                android:contentDescription="@string/help_image_7"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>