<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Licenses">

    <TextView
        android:id="@+id/osl_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:text="@string/open_source_libraries"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_medium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/osl_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/osl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/libraries_we_use"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/osl_header_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/osl_header"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@android:color/black"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_marginTop="16dp"
                android:text="@string/osl_header_detail" />

            <TextView
                android:id="@+id/glide_att"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/osl_header_detail"
                android:background="@drawable/text_bg"
                android:textColor="@android:color/black"
                android:text="@string/glide_license_info"
                android:autoLink="web"
                android:textColorLink="@color/link_blue"/>

            <TextView
                android:id="@+id/leakCanary_att"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/glide_att"
                android:background="@drawable/text_bg"
                android:textColor="@android:color/black"
                android:text="@string/leakCanary_att"
                android:autoLink="web"
                android:textColorLink="@color/link_blue"/>

            <TextView
                android:id="@+id/apache_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/leakCanary_att"
                android:background="@drawable/text_bg"
                android:textColor="@android:color/black"
                android:text="@string/apache_license"
                android:autoLink="web"
                android:textColorLink="@color/link_blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apache_license"
                android:background="@drawable/text_bg"
                android:textColor="@android:color/black"
                android:text="@string/google_att"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>